update blog front end

--- a/docs/assets/css/utils.css
+++ b/docs/assets/css/utils.css
@@ -87,3 +87,9 @@
     text-align: right;
     font-weight: normal;
 }
+
+[data-md-color-scheme="default"],
+[data-md-color-scheme="slate"] {
+      --md-primary-fg-color:  #477bbd;
+      --md-accent-fg-color: #477bbd
+}
