--- a/docs/assets/css/utils.css
+++ b/docs/assets/css/utils.css
@@ -97,3 +97,11 @@
 code {
   display: inline-block;
 }
+
+.md-tabs {
+    background-color: #00000094;
+}
+
+.md-header {
+    background: url(var(--md-primary-fg-color) url(https://images.unsplash.com/photo-1520157646479-22f25713523d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80) left center/cover no-repeat);
+}
