--- a/docs/assets/css/utils.css
+++ b/docs/assets/css/utils.css
@@ -106,3 +106,8 @@ code {
 .md-typeset :is(.admonition, details) {
     font-size: 1em;
 }
+
+.md-typeset pre > code {
+    word-break: break-word;
+    white-space: pre-wrap;
+}
