--- a/docs/assets/css/utils.css
+++ b/docs/assets/css/utils.css
@@ -115,3 +115,25 @@ code {
     word-break: break-word;
     white-space: pre-wrap;
 }
+
+[data-md-color-scheme="slate"] #mkdocs-content-password {
+    background-color:rgba(0, 0, 0, 0.11)
+}
+
+[data-md-color-scheme="default"] #mkdocs-content-password {
+    background-color:white;
+}
+
+#mkdocs-content-password {
+    border-radius: 5px;
+    height: 40px;
+    width: 50%;
+    padding-left: 10px;
+}
+
+#mkdocs-decrypt-button {
+    border-radius: 5px;
+    fill: var(--md-default-fg-color--light);
+    height: 30px;
+    width: 5%;
+}
