--- a/overrides/partials/post-list.html
+++ b/overrides/partials/post-list.html
@@ -67,6 +67,7 @@
         .md-typeset .post .post-category {
             color: gray;
             font-size: small;
+            float: right;
         }
         .md-typeset .post .post-title {
             margin: 0.25rem 0;
@@ -106,6 +107,11 @@
             vertical-align: middle;
             display: inline-block;
         }
+
+        .post-category > .twemoji {
+            vertical-align: sub;
+        }
+
         /* page */
         .md-typeset .pages>.page {
             display: none;
@@ -158,10 +164,20 @@
         <div class="page" id="page{{ loop.index }}">
             {% for pg in pg_group %}
                 {% set pg_image = "" %}
-                {% if pg.meta and pg.meta.banner %}
-                    {% set pg_image = pg.meta.banner %}
-                {% elif pg.meta and pg.meta.image %}
-                    {% set pg_image = config.site_url ~ 'assets/img/' ~ pg.meta.image %}
+                {% set pg_category = "" %}
+                {% set pg_description = "" %}
+                {% if pg.meta %}
+                    {%if pg.meta.banner %}
+                        {% set pg_image = pg.meta.banner %}
+                    {% elif pg.meta.image %}
+                        {% set pg_image = config.site_url ~ 'assets/img/' ~ pg.meta.image %}
+                    {% endif %}
+                    {% if pg.meta.category %}
+                        {%  set pg_category = pg.meta.category | replace(page.meta.category, '') | replace('/', '') %}
+                    {% endif %}
+                    {% if pg.meta.description %}
+                        {% set pg_description = pg.meta.description | truncate(200)%}
+                    {% endif %}
                 {% endif %}
                 <div class="post">
                     <h4 class="post-title">
@@ -170,9 +186,7 @@
                     <div class="post-info-wrap">
                         <div class="post-info">
                             <p class="post-description">
-                                {% if pg.meta and pg.meta.description %}
-                                    {{ pg.meta.description | truncate(200) }}
-                                {% endif %}
+                                {{ pg_description }}
                             </p>
                             <div class="post-extra row">
                                 <div class="col">
@@ -183,6 +197,14 @@
                                         <span class="icon-text">
                                             {{ pg.new_date }}
                                         </span>
+                                        {% if pg_category %}
+                                        <span class="post-category">
+                                            <span class="twemoji">
+                                                {% include ".icons/material/folder.svg" %}
+                                            </span>
+                                            {{ pg_category }}
+                                            </span>
+                                        {% endif %}
                                     </p>
                                 </div>
                             </div>
@@ -190,6 +212,7 @@
                         {% if pg_image %}
                             <img class="post-banner " src='{{ pg_image }}' />
                         {% endif %}
+                        
                     </div>
                 </div>
             {% endfor %}
