add new hooks &

--- a/overrides/partials/post-list.html
+++ b/overrides/partials/post-list.html
@@ -68,6 +68,7 @@
             color: gray;
             font-size: small;
             float: right;
+            width: 100%;
         }
         .md-typeset .post .post-title {
             margin: 0.25rem 0;
@@ -166,6 +167,7 @@
                 {% set pg_image = "" %}
                 {% set pg_category = "" %}
                 {% set pg_description = "" %}
+                {% set category_link = "" %}
                 {% if pg.meta %}
                     {%if pg.meta.banner %}
                         {% set pg_image = pg.meta.banner %}
@@ -173,7 +175,20 @@
                         {% set pg_image = config.site_url ~ 'assets/img/' ~ pg.meta.image %}
                     {% endif %}
                     {% if pg.meta.category %}
-                        {%  set pg_category = pg.meta.category | replace(page.meta.category, '') | replace('/', '') %}
+                        {% set pg_category = pg.meta.category | replace(page.meta.category, '') | replace('/', '') %}                
+                        {% if pg_category | length > 1 %}
+                            {% set category_link = config.docs_dir ~ "/" ~ page.meta.category ~ '/' ~ pg_category ~ '/index.md' %}
+                            {% set category_exists = category_link | page_exists %}
+                            {% if category_exists %}
+                                {% set link = pg.meta.category %}
+                                {% set link = config.site_url ~ link ~ '/' %}
+                                {% set pg_category = '<a href="' ~ link ~ '">' ~ pg_category ~ '</a>' %}
+                                <script>
+                                </script>
+                            {% endif %}
+                        {% endif %}
+                        <script>
+                        </script>
                     {% endif %}
                     {% if pg.meta.description %}
                         {% set pg_description = pg.meta.description | truncate(200)%}
@@ -197,7 +212,7 @@
                                         <span class="icon-text">
                                             {{ pg.new_date }}
                                         </span>
-                                        {% if pg_category %}
+                                        {% if pg_category | length > 1 %}
                                         <span class="post-category">
                                             <span class="twemoji">
                                                 {% include ".icons/material/folder.svg" %}
@@ -212,7 +227,6 @@
                         {% if pg_image %}
                             <img class="post-banner " src='{{ pg_image }}' />
                         {% endif %}
-                        
                     </div>
                 </div>
             {% endfor %}
