--- a/docs/assets/css/custom_attributes.css
+++ b/docs/assets/css/custom_attributes.css
@@ -19,10 +19,25 @@
     border-radius: 5px;
 }
 
-.hash {
-    color: #0066ff;
+.hash::before {
+    content: "#";
+}
+
+[data-md-color-scheme="default"] .hash
+{
+    color: #5f5f60;
     border-radius: 5px;
-    background-color: #f0f0f0;
+    background-color: #bfbcbca2;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+[data-md-color-scheme="slate"] .hash {
+    color: #e2e2e29a;
+    border-radius: 5px;
+    background-color: #6b6b6b1d;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .md-typeset .admonition.grid {
