--- a/overrides/partials/post-list.html
+++ b/overrides/partials/post-list.html
@@ -49,7 +49,6 @@
 {% if blog_pages|count > 0 %}
     {# count the number of pages #}
     {% set page_num = 1 %}
-    {% set page_html =  "" %}
     {% if config_pagination['pagination'] %}
         {% set page_num = (blog_pages|count / 10)|round(method='ceil')|int %}
         {% if config_pagination['pagination_translation'] %}
@@ -67,16 +66,12 @@
             >
                 <!-- <a href="#">&laquo;</a> -->
                 {% for pg_group in blog_pages|slice(page_num) %}
-                {% set page_html = "" %}
-                {% if config_pagination['pagination'] %}
-                    {% set page_html = "#page{{ loop.index }}" %}
-                {% endif %}
-                <a
-                    class="page-number {% if loop.index==1 %}active{% endif%}"
-                    href="{{page_html}}"
-                >
-                    {{ loop.index }}
-                </a>
+                    <a
+                        class="page-number {% if loop.index==1 %}active{% endif%}"
+                        href="#page{{loop.index}}"
+                    >
+                        {{ loop.index }}
+                    </a>
                 {% endfor %}
                 <!-- <a href="#">&raquo;</a> -->
             </div>
@@ -85,10 +80,12 @@
     {# pagination #}
     <div class="pages">
         {% for pg_group in blog_pages|slice(page_num) %}
-            <div
-                class="page"
-                id="page{{ loop.index }}"
-            >
+            {% if config_pagination['pagination'] %}
+                <div
+                    class="page"
+                    id="page{{ loop.index }}"
+                >
+            {% endif %}
             {% for pg in pg_group %}
                 {% set pg_image = "" %}
                 {% set pg_category = "" %}
@@ -169,13 +166,9 @@
                 <!-- <a href="#">&laquo;</a> -->
                 
                 {% for pg_group in blog_pages|slice(page_num) %}
-                {% set page_html = "" %}
-                {% if config_pagination['pagination'] %}
-                    {% set page_html = "#page{{ loop.index }}" %}
-                {% endif %}
                 <a
                     class="page-number {% if loop.index==1 %}active{% endif%}"
-                    href="{{page_html}}"
+                    href="#page{{ loop.index }}"
                 >
                     {{ loop.index }}
                 </a>
@@ -198,45 +191,46 @@
         }
     </script>
     {% if config_pagination['pagination'] %}
-    <script>
-        function activatePaginationLinks(name) {
-            var pagination = document.getElementById("pagination-" + name);
-            if (pagination) {
-                var links = pagination.getElementsByClassName("page-number");
-                if (links.length) {
-                    for (var i = 0; i < links.length; i++) {
-                        if (links[i].getAttribute("href") == window.location.hash) {
-                            links[i].classList.add("active");
-                        } else {
-                            links[i].classList.remove("active")
+        <script>
+            function activatePaginationLinks(name) {
+                var pagination = document.getElementById("pagination-" + name);
+                if (pagination) {
+                    var links = pagination.getElementsByClassName("page-number");
+                    if (links.length) {
+                        for (var i = 0; i < links.length; i++) {
+                            if (links[i].getAttribute("href") == window.location.hash) {
+                                links[i].classList.add("active");
+                            } else {
+                                links[i].classList.remove("active")
+                            }
                         }
                     }
                 }
             }
-        }
 
-        // show page 1 as default
-        
-        window.location.hash = "#page1";
-
-        // listen to hash change
-        window.onhashchange = function () {
-            var hash = window.location.hash;
-            const regexp = /^#page[0-9]+$/;
-            if (regexp.test(hash)) {
-                var num = parseInt(hash.substr(5));
-                var max = parseInt(document.getElementById('page_num').dataset.value);
-                if (num >= 1 && num <= max) {
-                    activatePaginationLinks("top");
-                    activatePaginationLinks("bottom");
-                    scrollToTop();
-                    return;
-                }
-            }
-
+            // show page 1 as default
+            
             window.location.hash = "#page1";
-        }
-    </script>
+
+            // listen to hash change
+            window.onhashchange = function () {
+                var hash = window.location.hash;
+                const regexp = /^#page[0-9]+$/;
+                if (regexp.test(hash)) {
+                    var num = parseInt(hash.substr(5));
+                    var max = parseInt(document.getElementById('page_num').dataset.value);
+                    if (num >= 1 && num <= max) {
+                        activatePaginationLinks("top");
+                        activatePaginationLinks("bottom");
+                        scrollToTop();
+                        return;
+                    }
+                }
+
+                window.location.hash = "#page1";
+            }
+        </script>
+    {% endif %}
 {% else %}
     <style>
         .md-typeset .center {
