--- a/docs/assets/css/customization.css
+++ b/docs/assets/css/customization.css
@@ -13,8 +13,7 @@
 .dataview,
 .folderv,
 .md-tabs__item:nth-child(2),
-.md-tabs__item:nth-child(4),
-.md-nav__item:nth-child(4)
+.md-tabs__item:nth-child(4)
 {
     display: none;
 }
