--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,6 +1,2 @@
-<script
-    defer
-    src="https://chirpy.dev/bootstrap/comment.js"
-    data-chirpy-domain="mara-li.fr"
-></script>
-<div data-chirpy-comment="true" data-chirpy-theme="dark"></div>
+
+<div data-chirpy-comment="true"></div>
