--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,2 +1,8 @@
+<script
+    defer
+    src="https://chirpy.dev/bootstrap/comment.js"
+    data-chirpy-domain="www.mara-li.fr"
+></script>
+
 
 <div data-chirpy-comment="true" data-chirpy-theme="dark"></div>
