--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,8 +1,10 @@
-<script
-    defer
-    src="https://chirpy.dev/bootstrap/comment.js"
-    data-chirpy-domain="www.mara-li.fr"
-></script>
-
-
-<div data-chirpy-comment="true" data-chirpy-theme="dark"></div>
+{% set local_comments = "comments" | value_in_frontmatter(page.meta) %}
+{% set comments = config.extra["comments"] if local_comments is none else local_comments %}
+{% if comments %}
+    <script
+        defer
+        src="https://chirpy.dev/bootstrap/comment.js"
+        data-chirpy-domain="www.mara-li.fr"
+    ></script>
+    <div data-chirpy-comment="true" data-chirpy-theme="dark"></div>
+{% endif %}
