--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,5 +1,7 @@
 {% set local_comments = "comments" | value_in_frontmatter(page.meta) %}
-{% set comments = config.extra["comments"] if local_comments is none else local_comments %}
+{% set config_comments = "comments" | value_in_frontmatter(config.extra) %}
+{% set config_comments = False if config_comments is none else config.extra["comments"] %}
+{% set comments = config_comments if local_comments is none else page.meta['comments'] %}
 {% if comments %}
     <script
         defer
