--- a/docs/assets/css/template/grid.css
+++ b/docs/assets/css/template/grid.css
@@ -8,7 +8,7 @@
   grid-gap: 0.4rem;
   display: grid;
   margin: 1em 0;
-  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr))
+  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
 }
 
 .md-typeset .grid.cards > :-webkit-any(ul, ol) {
