adjust css snippets

--- a/docs/assets/template/css/snippets.css
+++ b/docs/assets/template/css/snippets.css
@@ -25,3 +25,22 @@
     -webkit-mask-image: var(--md-admonition-icon--grid);
     mask-image: var(--md-admonition-icon--grid);
 }
+
+.admonition.infobox {
+    float: left;
+}
+
+.md-typeset .admonition.grid {
+    box-shadow: none;
+}
+
+.md-typeset .admonition.grid p:not(.admonition-title) {
+    display: grid;
+}
+
+.md-typeset .admonition.grid .glightbox,
+.md-typeset .admonition.grid img {
+    display: table-cell;
+    vertical-align: middle;
+    grid-row: 2 / 4;
+}
