--- a/docs/assets/css/admonition.css
+++ b/docs/assets/css/admonition.css
@@ -233,11 +233,15 @@
 }
 
 .admonition.wiki table {
+  border: none;
   font-size: 1em;
-  border: none
 }
 
 .admonition.wiki table tr td:first-child {
   font-weight: bold;
 }
 
+.admonition.wiki table tr td {
+  border-top: 0;
+  padding: 0.3em 1.25em;
+}
