--- a/overrides/partials/tabs-item.html
+++ b/overrides/partials/tabs-item.html
@@ -9,6 +9,7 @@
           {% set icon_path = config.extra["icon_folder"] ~ "file.svg" %}
         {% endif %}
       {% endif %}
+      {% include icon_path %}
 	  {% endif %}
   {% endif %}
   {{ ref.title }}
