--- a/overrides/partials/nav-item.html
+++ b/overrides/partials/nav-item.html
@@ -10,13 +10,14 @@
 {% macro render_content(nav_item, ref = nav_item) %}
   {% if nav_item.is_page and nav_item.meta.icon %}
     {% set icon_path = config.extra["icon_folder"] ~ nav_item.meta.icon ~ ".svg" %}
-{% if not icon_path | file_exists %}
-	{% if nav_item.url | is_section %}
-		{% set icon_path = config.extra["icon_folder"] ~ "folder-open.svg" %}
-	{% else %}
-		{% set icon_path = config.extra["icon_folder"] ~ "file.svg" %}
-	{% endif %}
-{% endif %}
+    {% if not icon_path | file_exists %}
+	    {% if nav_item.url | is_section %}
+		    {% set icon_path = config.extra["icon_folder"] ~ "folder-open.svg" %}
+	    {% else %}
+		    {% set icon_path = config.extra["icon_folder"] ~ "file.svg" %}
+	    {% endif %}
+    {% endif %}
+    {% include icon_path %}
   {% endif %}
   <span class="md-ellipsis">
     {{ ref.title }}
