--- a/overrides/partials/post-list.html
+++ b/overrides/partials/post-list.html
@@ -98,7 +98,7 @@
                 {% if pg_title == "Index" %}
                     {% set pg_title = pg.parent.title %}
                 {% endif %}
-                {% set main_category = page.meta.category | lower %}
+                {% set main_category = page.meta.category | first | lower %}
                 {% if pg.meta %}
                     {% if pg.meta.title %}
                         {% set pg_title = pg.meta.title %}
@@ -111,12 +111,13 @@
                         {% set pg_image = config.site_url ~ attachmentsFolder ~ '/' ~ pg.meta.image %}
                     {% endif %}
                     {% if pg.meta.category %}
-                        {% set pg_category = pg.meta.category | lower | replace(main_category, '') | replace('/', '') | title %}
+                        {% set pg_category = pg.meta.category | replace_by_name | lower | replace(main_category, '') | replace('/', '') | title %}
+                        {{pg_category|log}}
                         {% if pg_category | length > 1 %}
                             {% set category_link = config.docs_dir ~ "/" ~ page.meta.category ~ '/' ~ pg_category ~ '/index.md' %}
                             {% set category_exists = category_link | page_exists %}
                             {% if category_exists %}
-                                {% set link = pg.meta.category %}
+                                {% set link = pg.meta.category | links %}
                                 {% set link = config.site_url ~ link ~ '/' %}
                                 {% set pg_category = '<a href="' ~ link ~ '">' ~ pg_category ~ '</a>' %}
                             {% endif %}
