--- a/overrides/partials/tabs-item.html
+++ b/overrides/partials/tabs-item.html
@@ -1,16 +1,19 @@
 {% macro render_content(nav_item, ref = nav_item) %}
   {% if nav_item == ref or "navigation.indexes" in features %}
     {% if nav_item.is_index and nav_item.meta.icon %}
-		  {% set icon_path = config.extra["icon_folder"] ~ nav_item.meta.icon ~ ".svg" %}
-      {% if not icon_path | file_exists %}
-        {% if nav_item.url | is_section %}
-          {% set icon_path = config.extra["icon_folder"] ~ "folder-open.svg" %}
-        {% else %}
-          {% set icon_path = config.extra["icon_folder"] ~ "file.svg" %}
-        {% endif %}
+      {% set icons_path = config.extra.icons.folder ~ nav_item.meta.icon ~ ".svg" %}
+      {% if not icons_path | icon_exists %}
+	      {% if nav_item | is_section %}
+		      {% set icons_path = config.extra.icons.folder ~ config.extra.icons.default.folder %}
+	      {% else %}
+		      {% set icons_path = config.extra.icons.folder ~ config.extra.icons.default.file %}
+	      {% endif %}
       {% endif %}
-      {% include icon_path %}
-	  {% endif %}
+      {% include icons_path %}
+	  {% else %}
+      {% set icons_path = config.extra.icons.folder ~ config.extra.icons.default.folder %}
+      {% include icons_path %}
+    {% endif %}
   {% endif %}
   {{ ref.title }}
 {% endmacro %}
