--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -6,7 +6,7 @@
     <script
         defer
         src="https://chirpy.dev/bootstrap/comment.js"
-        data-chirpy-domain="www.mara-li.fr"
+        data-chirpy-domain="www.blog.mara-li.fr"
     ></script>
     <div data-chirpy-comment="true" data-chirpy-theme="dark"></div>
 {% endif %}
