update config & env

--- a/overrides/partials/meta.html
+++ b/overrides/partials/meta.html
@@ -18,7 +18,7 @@
         {% set description = page.meta.description %}
     {% endif %}
     {% if page.meta.image %}
-        {% set attachments = get_attachments_folder %}
+        {% set attachments = config | get_attachments_folder %}
         {% set image = config.site_url ~ attachments ~ "/" ~ page.meta.image %}
     {% elif page.meta.banner %}
         {% set image = page.meta.banner %}
