--- a/overrides/partials/post-list.html
+++ b/overrides/partials/post-list.html
@@ -106,7 +106,7 @@
                     {% if pg.meta.banner %}
                         {% set pg_image = pg.meta.banner %}
                     {% elif pg.meta.image %}
-                        {% set attachmentsFolder = get_attachments_folder %}
+                        {% set attachmentsFolder = config | get_attachments_folder %}
                         {% set pg_image = config.site_url ~ attachmentsFolder ~ '/' ~ pg.meta.image %}
                     {% endif %}
                     {% if pg.meta.category %}
